force-app/main/default/objects/Proposal_Template__c/Proposal_Template__c.object-meta.xml
<CustomObject>
    <label>Proposal Template</label>
    <nameField>
        <displayFormat>WT-{0000000000}</displayFormat>
        <label>Proposal Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>