force-app/main/default/objects/Proposal_Template__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Wizard Templates</relationshipLabel>
    <relationshipName>Wizard_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>