force-app/main/default/objects/Proposal_Template__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>Project_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>