force-app/main/default/objects/Proposal_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Intake</fullName>
            </value>
            <value>
                <fullName>Contractor Application</fullName>
            </value>
            <value>
                <fullName>Payee Application</fullName>
            </value>
            <value>
                <fullName>Proposal Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>